# vtm

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  flake.nix  gold.validate-gold.json  pyproject.toml  random.txt  slurm-12178887.out  vtm-local-model.vtm-no_memory-confirm.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/manifests/: README.md  controlled-coding-drift.json  oss-python.json  synthetic-smoke.json  terminal-shell-smoke.json  terminal-smoke.json
docs/: README.md  api.md  architecture.md  benchmark-recipes.md  benchmark-results-template.md  chpc_pipline.md  code-reference.md  codebase-guide.md  current-state-audit.md  dspy-integration.md  final-audit.md  final-scope.md  harness.md  livecodebench-baselines.md  longcot-pilot.md  runtime-example.md  swebench-lite-windows.md  type-system.md  vtm_structure.md  vtm_types.md  vtm_usage.md
docs/decisions/: 0001-kernel-first.md  0002-event-and-artifact-contracts.md  0003-benchmark-harness-contract.md  0004-rlm-reranking-contract.md  0005-schema-compatibility-policy.md  README.md  (+6 more)
experiments/: livecodebench_dspy_pilot.py  longcot_pilot.py
launchers/: README.md
results/: README.md  benchmark_results.ipynb  export_lcb_passfail.py  merge_livecodebench_chunks.py  normalize_results.py  plot_passfail_graphs.py  prune_unusable_runs.py  visualize_results.py
scripts/: README.md  download_setup_benchmarks.sh  generate_code_reference.py  livecodebench_baseline_driver.py  livecodebench_method_driver.py  livecodebench_rag_driver.py  livecodebench_rlm_driver.py  livecodebench_rlm_rag_driver.py  preflight_checks.sh  queue_livecodebench_methods.sh  run_benchmarks.sh  run_controlled_coding_drift.sh  run_dspy_vtm_smoke.py  run_livecodebench_baseline.sh  run_livecodebench_dspy_pilot.py  run_livecodebench_dspy_pilot_batch.sh  run_longcot_pilot.py  run_maintained_regression_bundle.sh  run_swebench_baseline.sh  setup_project.sh  setup_rlm.sh  vtm_local_patcher.py  vtm_scaffold_bridge.py
src/: README.md
tests/: README.md  conftest.py  test_agents.py  test_anchor_relocation.py  test_artifacts.py  test_benchmark_cli.py  test_benchmark_report.py  test_benchmarks.py  test_cache.py  test_consolidation.py  test_docs_parity.py  test_embeddings.py  test_event_export.py  test_harness.py  test_kernel_topology.py  test_livecodebench_baselines.py  test_longcot_pilot.py  test_memory_kernel_runtime.py  test_openai_agent.py  test_openai_chat.py  test_openai_embedding.py  test_openai_rlm.py  test_procedures.py  test_python_anchors.py  test_retrieval.py  test_rlm_reranking.py  test_runtime_fingerprints.py  test_service_atomicity.py  test_store_migrations.py  test_subset_manifest.py  test_swebench.py  test_terminal_benchmarking.py  test_transactions.py  test_types.py  test_verification.py  test_visibility.py  test_vtm_dspy.py  test_vtm_rlm.py
vtm/: __init__.py  structure.py  types.py
(+710 files in other folders)
