[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "vtm"
version = "0.1.0"
description = "Verified Transactional Memory kernel for coding agents in mutable repositories."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Josh Schell", email = "98379773+JoshuaSchell@users.noreply.github.com" }]
maintainers = [{ name = "Josh Schell", email = "98379773+JoshuaSchell@users.noreply.github.com" }]
keywords = ["agents", "benchmarks", "memory", "retrieval", "verification"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic>=2.12,<3.0",
  "tree-sitter>=0.25,<0.26",
  "tree-sitter-python>=0.25,<0.26",
]

[project.urls]
Homepage = "https://github.com/VTM-for-Recursive-Coding-Agents/vtm"
Repository = "https://github.com/VTM-for-Recursive-Coding-Agents/vtm"
Issues = "https://github.com/VTM-for-Recursive-Coding-Agents/vtm/issues"

[project.optional-dependencies]
dev = [
  "mypy>=1.14",
  "pytest>=8.3",
  "ruff>=0.8",
]
dspy = [
  "dspy>=3.1,<4.0",
]
openai = [
  "openai>=2.26,<3.0",
]
bench = []

[project.scripts]
vtm-bench = "vtm.benchmarks.run:main"
vtm-bench-compare = "vtm.benchmarks.compare:main"
vtm-bench-matrix = "vtm.benchmarks.matrix:main"
vtm-bench-report = "vtm.benchmarks.report:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vtm", "src/vtm_dspy"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["vtm", "vtm_dspy"]
